tests/snapshots/snapshot_schemas__agent_event_kind_schema.snap
---
source: tests/snapshot_schemas.rs
expression: "serde_json::to_string_pretty(&schema).unwrap()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "AgentEventKind",
  "description": "The payload discriminator for [`AgentEvent`].\n\nSerialized with `#[serde(tag = \"type\")]` — note this is different from\nthe protocol envelope which uses `#[serde(tag = \"t\")]`.",
  "oneOf": [
    {
      "description": "The agent run has started.",
      "type": "object",
      "properties": {
        "message": {
          "description": "Human-readable start message.",
          "type": "string"
        },
        "type": {
          "type": "string",
          "const": "run_started"
        }
      },
      "required": [
        "type",
        "message"
      ]
    },
    {
      "description": "The agent run has completed.",
      "type": "object",
      "properties": {
        "message": {
          "description": "Human-readable completion message.",
          "type": "string"
        },
        "type": {
          "type": "string",
          "const": "run_completed"
        }
      },
      "required": [
        "type",
        "message"
      ]
    },
    {
      "description": "Incremental assistant text (streaming token).",
      "type": "object",
      "properties": {
        "text": {
          "description": "The text fragment.",
          "type": "string"
        },
        "type": {
          "type": "string",
          "const": "assistant_delta"
        }
      },
      "required": [
        "type",
        "text"
      ]
    },
    {
      "description": "Complete assistant message.",
      "type": "object",
      "properties": {
        "text": {
          "description": "The full message text.",
          "type": "string"
        },
        "type": {
          "type": "string",
          "const": "assistant_message"
        }
      },
      "required": [
        "type",
        "text"
      ]
    },
    {
      "description": "A tool invocation by the agent.",
      "type": "object",
      "properties": {
        "input": {
          "description": "JSON input passed to the tool."
        },
        "parent_tool_use_id": {
          "description": "Identifier of the parent tool use, if nested.",
          "type": [
            "string",
            "null"
          ]
        },
        "tool_name": {
          "description": "Name of the tool being called.",
          "type": "string"
        },
        "tool_use_id": {
          "description": "Unique identifier for this tool use.",
          "type": [
            "string",
            "null"
          ]
        },
        "type": {
          "type": "string",
          "const": "tool_call"
        }
      },
      "required": [
        "type",
        "tool_name",
        "input"
      ]
    },
    {
      "description": "Result returned from a tool invocation.",
      "type": "object",
      "properties": {
        "is_error": {
          "description": "Whether the tool reported an error.",
          "type": "boolean"
        },
        "output": {
          "description": "JSON output from the tool."
        },
        "tool_name": {
          "description": "Name of the tool that produced this result.",
          "type": "string"
        },
        "tool_use_id": {
          "description": "Identifier correlating to the originating tool call.",
          "type": [
            "string",
            "null"
          ]
        },
        "type": {
          "type": "string",
          "const": "tool_result"
        }
      },
      "required": [
        "type",
        "tool_name",
        "output",
        "is_error"
      ]
    },
    {
      "description": "A file was created or modified in the workspace.",
      "type": "object",
      "properties": {
        "path": {
          "description": "Path to the changed file (relative to workspace root).",
          "type": "string"
        },
        "summary": {
          "description": "Human-readable summary of the change.",
          "type": "string"
        },
        "type": {
          "type": "string",
          "const": "file_changed"
        }
      },
      "required": [
        "type",
        "path",
        "summary"
      ]
    },
    {
      "description": "A shell command was executed.",
      "type": "object",
      "properties": {
        "command": {
          "description": "The command that was run.",
          "type": "string"
        },
        "exit_code": {
          "description": "Process exit code, if available.",
          "type": [
            "integer",
            "null"
          ],
          "format": "int32"
        },
        "output_preview": {
          "description": "Truncated preview of the command output.",
          "type": [
            "string",
            "null"
          ]
        },
        "type": {
          "type": "string",
          "const": "command_executed"
        }
      },
      "required": [
        "type",
        "command"
      ]
    },
    {
      "description": "A non-fatal warning emitted during the run.",
      "type": "object",
      "properties": {
        "message": {
          "description": "Warning message text.",
          "type": "string"
        },
        "type": {
          "type": "string",
          "const": "warning"
        }
      },
      "required": [
        "type",
        "message"
      ]
    },
    {
      "description": "A fatal error emitted during the run.",
      "type": "object",
      "properties": {
        "error_code": {
          "description": "Machine-readable error code from the unified taxonomy, if available.",
          "anyOf": [
            {
              "$ref": "#/$defs/ErrorCode"
            },
            {
              "type": "null"
            }
          ]
        },
        "message": {
          "description": "Error message text.",
          "type": "string"
        },
        "type": {
          "type": "string",
          "const": "error"
        }
      },
      "required": [
        "type",
        "message"
      ]
    }
  ],
  "$defs": {
    "ErrorCode": {
      "description": "Machine-readable, stable error code.\n\nEach variant serialises to a `snake_case` string that is guaranteed not to\nchange across patch releases.\n\n# Examples\n\n```\nuse abp_error::ErrorCode;\n\nlet code = ErrorCode::BackendTimeout;\nassert_eq!(code.as_str(), \"backend_timeout\");\nassert_eq!(code.to_string(), \"backend timed out\");\nassert_eq!(code.category().to_string(), \"backend\");\n```",
      "oneOf": [
        {
          "description": "Envelope failed to parse or has missing/invalid fields.",
          "type": "string",
          "const": "protocol_invalid_envelope"
        },
        {
          "description": "The sidecar handshake (hello exchange) failed.",
          "type": "string",
          "const": "protocol_handshake_failed"
        },
        {
          "description": "The `ref_id` field is missing from the envelope.",
          "type": "string",
          "const": "protocol_missing_ref_id"
        },
        {
          "description": "Message arrived in wrong order (e.g. event before hello).",
          "type": "string",
          "const": "protocol_unexpected_message"
        },
        {
          "description": "Contract version mismatch between host and sidecar.",
          "type": "string",
          "const": "protocol_version_mismatch"
        },
        {
          "description": "A required capability is not supported by the target dialect.",
          "type": "string",
          "const": "mapping_unsupported_capability"
        },
        {
          "description": "The source and target dialects are incompatible.",
          "type": "string",
          "const": "mapping_dialect_mismatch"
        },
        {
          "description": "Translation succeeded but information was lost.",
          "type": "string",
          "const": "mapping_lossy_conversion"
        },
        {
          "description": "A tool call cannot be represented in the target dialect.",
          "type": "string",
          "const": "mapping_unmappable_tool"
        },
        {
          "description": "Requested backend name does not exist.",
          "type": "string",
          "const": "backend_not_found"
        },
        {
          "description": "The backend is temporarily unavailable.",
          "type": "string",
          "const": "backend_unavailable"
        },
        {
          "description": "Backend did not respond within the configured timeout.",
          "type": "string",
          "const": "backend_timeout"
        },
        {
          "description": "The backend rejected the request due to rate limiting.",
          "type": "string",
          "const": "backend_rate_limited"
        },
        {
          "description": "Authentication with the backend failed.",
          "type": "string",
          "const": "backend_auth_failed"
        },
        {
          "description": "The requested model was not found on the backend.",
          "type": "string",
          "const": "backend_model_not_found"
        },
        {
          "description": "Backend process exited unexpectedly.",
          "type": "string",
          "const": "backend_crashed"
        },
        {
          "description": "A tool invocation failed during execution.",
          "type": "string",
          "const": "execution_tool_failed"
        },
        {
          "description": "An error occurred in the staged workspace.",
          "type": "string",
          "const": "execution_workspace_error"
        },
        {
          "description": "The operation was denied due to insufficient permissions.",
          "type": "string",
          "const": "execution_permission_denied"
        },
        {
          "description": "The contract version does not match the expected version.",
          "type": "string",
          "const": "contract_version_mismatch"
        },
        {
          "description": "The payload violates the contract schema.",
          "type": "string",
          "const": "contract_schema_violation"
        },
        {
          "description": "The receipt is structurally invalid or cannot be verified.",
          "type": "string",
          "const": "contract_invalid_receipt"
        },
        {
          "description": "A required capability is not supported by the backend.",
          "type": "string",
          "const": "capability_unsupported"
        },
        {
          "description": "Capability emulation layer failed.",
          "type": "string",
          "const": "capability_emulation_failed"
        },
        {
          "description": "A policy rule denied the operation.",
          "type": "string",
          "const": "policy_denied"
        },
        {
          "description": "Policy definition itself is malformed.",
          "type": "string",
          "const": "policy_invalid"
        },
        {
          "description": "Failed to initialise the staged workspace.",
          "type": "string",
          "const": "workspace_init_failed"
        },
        {
          "description": "Failed to copy / stage files into the workspace.",
          "type": "string",
          "const": "workspace_staging_failed"
        },
        {
          "description": "IR lowering (high-level → wire) failed.",
          "type": "string",
          "const": "ir_lowering_failed"
        },
        {
          "description": "IR structure is invalid or inconsistent.",
          "type": "string",
          "const": "ir_invalid"
        },
        {
          "description": "Computed receipt hash does not match the declared hash.",
          "type": "string",
          "const": "receipt_hash_mismatch"
        },
        {
          "description": "Receipt chain has a gap or out-of-order entry.",
          "type": "string",
          "const": "receipt_chain_broken"
        },
        {
          "description": "Dialect identifier is not recognised.",
          "type": "string",
          "const": "dialect_unknown"
        },
        {
          "description": "Mapping between dialects failed.",
          "type": "string",
          "const": "dialect_mapping_failed"
        },
        {
          "description": "Configuration file or value is invalid.",
          "type": "string",
          "const": "config_invalid"
        },
        {
          "description": "Catch-all for unexpected internal errors.",
          "type": "string",
          "const": "internal"
        }
      ]
    }
  }
}
